unpackaged/main/default/objects/Contact/fields/Activity_Center__c.field-meta.xml
<CustomField>
    <fullName>Activity_Center__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity Center</label>
    <length>50</length>
    <type>Text</type>
</CustomField>