unpackaged/main/default/objects/Contact/fields/Activity_Center_Code__c.field-meta.xml
<CustomField>
    <fullName>Activity_Center_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity Center Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>