unpackaged/main/default/objects/Contact/fields/ETIN_Employee__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>