unpackaged/main/default/objects/Contact/fields/ETIN_Insurance_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Insurance_Card_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance Card Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>