unpackaged/main/default/objects/Contact/fields/ETIN_Visa_Emirates__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Visa_Emirates__c</fullName>
    <label>Place of Visa Issuance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UAE_Emirates</valueSetName>
    </valueSet>
</CustomField>