unpackaged/main/default/objects/Contact/fields/ETSALES_Account_Site__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Account_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Site</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ETSALES_Account_Sites__c.ETSALES_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ETSALES_Account_Sites__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>