unpackaged/main/default/objects/Contact/fields/ETSales_Contact_Person_Id__c.field-meta.xml
<CustomField>
    <fullName>ETSales_Contact_Person_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Contact Person Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>