unpackaged/main/default/objects/Contact/fields/ETSales_Contact_Phone_Id__c.field-meta.xml
<CustomField>
    <fullName>ETSales_Contact_Phone_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Phone Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>