unpackaged/main/default/objects/Contact/fields/ETSales_Customer_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>ETSales_Customer_Account_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Account Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>