unpackaged/main/default/objects/Contact/fields/ETSALES_Key_Role__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Key_Role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Key Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>