unpackaged/main/default/objects/Contact/fields/ETSALES_Mob_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Mob_Country_Code__c</fullName>
    <label>Mob Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ISD_Country_Code</valueSetName>
    </valueSet>
</CustomField>