unpackaged/main/default/objects/Contact/fields/ETSales_Phone__c.field-meta.xml
<CustomField>
    <fullName>ETSales_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>