unpackaged/main/default/objects/Contact/fields/ETVIN_Insurance_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>ETVIN_Insurance_Portal_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Portal User</label>
    <type>Checkbox</type>
</CustomField>