unpackaged/main/default/objects/Contact/fields/Integration_Message__c.field-meta.xml
<CustomField>
    <fullName>Integration_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Integration Message</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>