unpackaged/main/default/objects/Contact/fields/IsCustomerQuoteContact__c.field-meta.xml
<CustomField>
    <fullName>IsCustomerQuoteContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Customer Quote Contact</label>
    <type>Checkbox</type>
</CustomField>