unpackaged/main/default/objects/Contact/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>GL Details</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>