unpackaged/main/default/objects/Contact/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>