unpackaged/main/default/objects/Contact/fields/Oracle_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Account_ID__c</fullName>
    <formula>Account.ETSALES_Customer_Account_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oracle Account ID</label>
    <type>Text</type>
</CustomField>