unpackaged/main/default/objects/Contact/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <description>GL Details</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>