unpackaged/main/default/objects/Contact/fields/Site_Use_Id__c.field-meta.xml
<CustomField>
    <fullName>Site_Use_Id__c</fullName>
    <formula>ETSALES_Account_Site__r.ETSALES_Site_Use_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Use Id</label>
    <type>Text</type>
</CustomField>