unpackaged/main/default/objects/Contact/recordTypes/ET_Employees.recordType-meta.xml
<RecordType>
    <fullName>ET_Employees</fullName>
    <active>true</active>
    <label>ET Employees</label>
</RecordType>