unpackaged/main/default/objects/Contact/recordTypes/ETIN_Employee_Family.recordType-meta.xml
<RecordType>
    <fullName>ETIN_Employee_Family</fullName>
    <active>true</active>
    <label>Employee Family</label>
</RecordType>