unpackaged/main/default/objects/Contact/recordTypes/ETSALES_B2B_Contact.recordType-meta.xml
<RecordType>
    <fullName>ETSALES_B2B_Contact</fullName>
    <active>true</active>
    <label>B2B Contact</label>
</RecordType>