unpackaged/main/default/objects/Contact/recordTypes/ETT_Customer.recordType-meta.xml
<RecordType>
    <fullName>ETT_Customer</fullName>
    <active>true</active>
    <label>Tyre Customer</label>
</RecordType>