unpackaged/main/default/objects/Contact/recordTypes/Insurance_Partner.recordType-meta.xml
<RecordType>
    <fullName>Insurance_Partner</fullName>
    <active>true</active>
    <label>Insurance Partner</label>
</RecordType>