unpackaged/main/default/objects/Contact/validationRules/ETT_Mobile_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETT_Mobile_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(REGEX(MobilePhone, &quot;(\\D?[+]\\D?[9]\\D?[7]\\D?[1])[\\s][0-9]{9}&quot;)),
OR(
$RecordType.Name = &quot;Tyre Supplier&quot;,
$RecordType.Name = &quot;Tyre Customer&quot;,
$RecordType.Name = &quot;Tyre Internal&quot;,
$RecordType.Name = &quot;Tyre Internal Private&quot;
))</errorConditionFormula>
    <errorMessage>Mobile numbers should be in this format (+971 XXXXXXXXX)</errorMessage>
</ValidationRule>