unpackaged/main/default/objects/Contact/validationRules/Insurance_Age_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Insurance_Age_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>ETIN_Age__c &gt;= 18 &amp;&amp;  RecordType.DeveloperName ==&#39;ETIN_Employee_Family&#39;</errorConditionFormula>
    <errorMessage>You cannot add child age over 18 years</errorMessage>
</ValidationRule>