unpackaged/main/default/objects/Contact/listViews/Employee_Contacts.listView-meta.xml
<ListView>
    <fullName>Employee_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.ET_Employees</value>
    </filters>
    <label>Employee Contacts</label>
    <sharedTo>
        <role>Insurance_Admin</role>
        <role>Insurance_HR_Manager</role>
        <role>Insurance_Zone_Coordinator</role>
    </sharedTo>
</ListView>