unpackaged/main/default/objects/Contact/listViews/Employee_Family_Contacts.listView-meta.xml
<ListView>
    <fullName>Employee_Family_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.ETIN_Employee_Family</value>
    </filters>
    <label>Employee Family Contacts</label>
</ListView>