unpackaged/main/default/objects/Contact/listViews/Tyre_Supplier.listView-meta.xml
<ListView>
    <fullName>Tyre_Supplier</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>bash</value>
    </filters>
    <label>Tyre - Supplier</label>
</ListView>